[package]
name = "blkcli"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["env", "derive"]}
md5 = "0.7.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4"
rand = "0.8.5"
pbkdf2 = { version = "0.12", features = ["simple"]}
rand_core = { version = "0.6", features = ["std"]}
